--- a/views/layout/navbar.twig
+++ b/views/layout/navbar.twig
@@ -54,7 +54,7 @@
     </button>
     <div class="navbar-collapse collapse justify-content-stretch">
         <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item {{ (navItem == 'home') ? 'active' : '' }}">
                 <a class="nav-link" href="/general/home.php">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item"><a class="nav-link" href="/projects/listprojects.php">Projects</a></li>
