--- a/views/login.twig
+++ b/views/login.twig
@@ -11,12 +11,16 @@
 {% block content %}
     <div class="container">
 
-        <form class="form-signin" action="/general/login.php?auth=test" method="post">
+        {% if error|length > 0 %}
+        <div class="alert alert-danger">{{  error }}</div>
+        {% endif %}
+
+        <form class="form-signin" action="/general/login.php" method="post">
             <h2 class="form-signin-heading">Please sign in</h2>
             <label for="inputEmail" class="sr-only">Username</label>
-            <input name="usernameForm" type="text" id="usernameForm" class="form-control" placeholder="Username" required="" autofocus="" autocomplete="off">
+            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="" autocomplete="off">
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="passwordForm" name="passwordForm" class="form-control" placeholder="Password" required="" autocomplete="off">
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" autocomplete="off">
 {#
             <div class="checkbox">
                 <label>
@@ -24,6 +28,7 @@
                 </label>
             </div>
 #}
+            <input type="hidden" name="auth" value="test" />
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
 
