initial attempt to implement a translation using the symfony translation component.  Also setting a default language based on the accepted language header from the browser

--- a/views/login.twig
+++ b/views/login.twig
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+            <p class="form-signin-heading">{% trans %}help.setup_notifications{% endtrans %}</p>
     <div class="container">
 
         {% if error|length > 0 %}
@@ -16,46 +17,19 @@
         {% endif %}
 
         <form class="form-signin" action="/general/login.php" method="post">
-            <h2 class="form-signin-heading">Please sign in</h2>
+            <h2 class="form-signin-heading">{% trans %}please_login{% endtrans %}</h2>
             <label for="inputEmail" class="sr-only">Username</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="" autocomplete="off">
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" autocomplete="off">
 
             <div class="form-group">
+                <p>Default Language: {{ defaultLanguage }}</p>
                 <label for="exampleFormControlSelect1">Select Language</label>
                 <select class="form-control" name="languageForm">
-                    <option value='ar'>Arabic</option>
-                    <option value='az'>Azerbaijani</option>
-                    <option value='pt-br'>Brazilian Portuguese</option>
-                    <option value='bg'>Bulgarian</option>
-                    <option value='ca'>Catalan</option>
-                    <option value='zh'>Chinese simplified</option>
-                    <option value='zh-tw'>Chinese traditional</option>
-                    <option value='cs-iso'>Czech (iso)</option>
-                    <option value='cs-win1250'>Czech (win1250)</option>
-                    <option value='da'>Danish</option>
-                    <option value='nl'>Dutch</option>
-                    <option value='en'>English</option>
-                    <option value='et'>Estonian</option>
-                    <option value='fr'>French</option>
-                    <option value='de'>German</option>
-                    <option value='hu'>Hungarian</option>
-                    <option value='is'>Icelandic</option>
-                    <option value='in'>Indonesian</option>
-                    <option value='it'>Italian</option>
-                    <option value='ko'>Korean</option>
-                    <option value='lv'>Latvian</option>
-                    <option value='ja'>Japanese</option>
-                    <option value='no'>Norwegian</option>
-                    <option value='pl'>Polish</option>
-                    <option value='pt'>Portuguese</option>
-                    <option value='ro'>Romanian</option>
-                    <option value='ru'>Russian</option>
-                    <option value='sk-win1250'>Slovak (win1250)</option>
-                    <option value='es'>Spanish</option>
-                    <option value='tr'>Turkish</option>
-                    <option value='uk'>Ukrainian</option>
+                    {% for key, lang in languages %}
+                        <option value="{{ key }}" {% if key == defaultLanguage|lower %}selected="selected"{% endif %}>{{ lang }}</option>
+                    {% endfor %}
                 </select>
             </div>
 {#
